--- a/helix/config.toml
+++ b/helix/config.toml
@@ -12,6 +12,7 @@ line-number = "absolute"
 cursorline = true
 idle-timeout = 300
 color-modes = true
+true-color = true
 rulers = [80]
 
 [editor.statusline]
