--- a/helix/config.toml
+++ b/helix/config.toml
@@ -16,6 +16,7 @@ idle-timeout = 300
 color-modes = true
 true-color = true
 rulers = [80]
+auto-format = false
 
 [editor.statusline]
 left = ["mode", "spinner"]
