simplify the keybindings

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -12,7 +12,7 @@ theme = "dracula"
 mouse = true
 line-number = "absolute"
 cursorline = true
-idle-timeout = 300
+# idle-timeout = 300
 color-modes = true
 true-color = true
 rulers = [80]
@@ -43,34 +43,34 @@ render = true
 
 # KEY BINDINGS
 [keys.normal]
-Z = { Z = ":wq", Q = ":q!" } # save and quit without saving
+# Z = { Z = ":wq", Q = ":q!" } # save and quit without saving
 G = "goto_file_end"
 j = [ "move_line_down", "align_view_center" ]
 k = [ "move_line_up", "align_view_center" ]
 
-left = { left = "goto_line_start"}
-right= { right= "goto_line_end"}
+# left = { left = "goto_line_start"}
+# right= { right= "goto_line_end"}
 
 [keys.normal.space]
-z = ":quit"
+# z = ":quit"
 
 [keys.insert]
-j = { k = "normal_mode" } # Maps `jk` to exit insert mode
+j = { j = "normal_mode" } # Maps `jk` to exit insert mode
 
 # Emacs Bindings in insert mode
-C-a = "goto_line_start"
-C-e = "goto_line_end"
+# C-a = "goto_line_start"
+# C-e = "goto_line_end"
 
 # move cursor in insert mode
-A-h = "move_char_left"
-A-j = "move_line_down"
-A-k = "move_line_up"
-A-l = "move_char_right"
+# A-h = "move_char_left"
+# A-j = "move_line_down"
+# A-k = "move_line_up"
+# A-l = "move_char_right"
 up =    "move_line_up"
 down =  "move_line_down"
 left =  "move_char_left"
 right = "move_char_right"
-left = { left = "goto_line_start"}
-right= { right= "goto_line_end"}
+# left = { left = "goto_line_start"}
+# right= { right= "goto_line_end"}
 
 
