--- a/helix/config.toml
+++ b/helix/config.toml
@@ -40,6 +40,8 @@ render = "all"
 [editor.indent-guides]
 render = true
 
+# terminal = { command = "tmux", args = ["split-window"]  }
+
 
 # KEY BINDINGS
 [keys.normal]
