--- a/helix/config.toml
+++ b/helix/config.toml
@@ -51,8 +51,8 @@ j = [ "move_line_down", "align_view_center" ]
 k = [ "move_line_up", "align_view_center" ]
 c = ["trim_selections", "change_selection"]
 
-left = { left = "goto_line_start"}
-right= { right= "goto_line_end"}
+# left = { left = "goto_line_start"}
+# right= { right= "goto_line_end"}
 
 [keys.normal.space]
 z = ":quit"
