--- a/zed/settings.json
+++ b/zed/settings.json
@@ -8,7 +8,16 @@
 // from the command palette or from `Zed` application menu.
 {
   "base_keymap": "VSCode",
-  "theme": "Atelier Sulphurpool Light",
+  "theme": "Material Dark",
   "buffer_font_size": 15,
-  "vim_mode": true
+  "vim_mode": true,
+  "assistant": {
+    "version": "1",
+    "provider": {
+      "name": "openai",
+      "type": "openai",
+      "default_model": "gpt-4-turbo-preview",
+      "api_url": "http://localhost:11434/v1"
+    }
+  }
 }
