--- a/zed/settings.json
+++ b/zed/settings.json
@@ -8,7 +8,7 @@
 // from the command palette or from `Zed` application menu.
 {
   "base_keymap": "VSCode",
-  "theme": "Material Dark",
+  "theme": "Github Light",
   "buffer_font_size": 15,
   "vim_mode": true,
   "assistant": {
@@ -18,6 +18,16 @@
       "type": "openai",
       "default_model": "gpt-4-turbo-preview",
       "api_url": "http://localhost:11434/v1"
+    }
+  },
+  "languages": {
+    "Python": {
+      "format_on_save": {
+        "external": {
+          "command": "black",
+          "arguments": ["-"]
+        }
+      }
     }
   }
 }
