more zed settings

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -4,51 +4,33 @@
 // documentation: https://zed.dev/docs/configuring-zed
 //
 // To see all of Zed's default settings without changing your
-// custom settings, run the `open default settings` command
-// from the command palette or from `Zed` application menu.
-// "vim_mode": true
+// custom settings, run `zed: open default settings` from the
+// command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "language_models": {
-    "ollama": {}
-  },
-  "vim_mode": false,
-  "theme": "Github Light",
-  "ui_font_size": 12,
-  "buffer_font_size": 13,
-  "buffer_font_family": "MonoLisa",
-  "soft_wrap": "editor_width",
-  "preferred_line_length": 80,
   "telemetry": {
-    // Send debug info like crash reports.
-    "diagnostics": true,
-    // Send anonymized usage data like what languages you're using Zed with.
+    "diagnostics": false,
     "metrics": false
   },
-  "assistant": {
-    "default_model": {
-      "provider": "ollama",
-      "model": "llama3.1:latest"
-    },
-    "version": "2",
-    "provider": null
+  "redact_private_values": false,
+  "use_autoclose": true,
+  "current_line_highlight": "none",
+  "indent_guides": {
+    "enabled": false
   },
-  "languages": {
-    "Python": {
-      "format_on_save": {
-        "external": {
-          "command": "black",
-          "arguments": ["-"]
-        }
-      }
-    },
-    "JSON": {
-      "prettier": {
-        "allowed": true,
-        "parser": "json"
-      }
-    },
-    "Markdown": {
-      "soft_wrap": "editor_width"
-    }
+  "ui_font_features": {
+    "calt": true
+  },
+  "buffer_font_family": "JetBrainsMonoNL Nerd Font Mono",
+  "ui_font_family": "JetBrainsMonoNL Nerd Font Mono",
+  "cursor_blink": false,
+  "vertical_scroll_margin": 6,
+  "vim_mode": true,
+  "cursor_shape": "block",
+  "ui_font_size": 13,
+  "buffer_font_size": 14,
+  "theme": {
+    "mode": "system",
+    "light": "Tokyo Night Storm",
+    "dark": "Tokyo Night"
   }
 }
