--- a/zed/settings.json
+++ b/zed/settings.json
@@ -32,7 +32,7 @@
   "buffer_font_size": 14,
   "theme": {
     "mode": "system",
-    "light": "Tokyo Night Storm",
+    "light": "Xcode Presentation Light",
     "dark": "Tokyo Night"
   }
 }
