zo z to file and code open' config.fish

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -32,7 +32,7 @@
   "buffer_font_size": 14,
   "theme": {
     "mode": "system",
-    "light": "Xcode Presentation Light",
+    "light": "Serendipity Morning - No Italics",
     "dark": "Tokyo Night"
   }
 }
