tokyo light now for zed

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -32,7 +32,7 @@
   "buffer_font_size": 14,
   "theme": {
     "mode": "system",
-    "light": "Night Owl Light",
+    "light": "Fleet Light",
     "dark": "Tokyo Night"
   }
 }
