Changed to c++ bindings for jai.

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -23,7 +23,7 @@
     "calt": true
   },
   "file_types": {
-    "Odin": ["odin", "jai"]
+    "C++": ["c", "jai"]
   },
   "terminal": {
     "toolbar": {
