tab_size 3  by default and font_weight for keywords 800

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -12,6 +12,7 @@
     "diagnostics": false,
     "metrics": false
   },
+  "tab_size": 3,
   "redact_private_values": false,
   "restore_on_startup": "none",
   "use_autoclose": true,
@@ -72,7 +73,7 @@
         "font_style": "italic"
       },
       "keyword": {
-        "font_weight": 600
+        "font_weight": 800
       }
     }
   }
