--- a/zed/settings.json
+++ b/zed/settings.json
@@ -25,7 +25,7 @@
       "calt": true
    },
    "file_types": {
-      "C++": ["c", "jai"]
+      "Odin": ["c", "jai"]
    },
    "terminal": {
       "toolbar": {
@@ -38,10 +38,10 @@
    "ui_font_family": "Geneva",
    "cursor_blink": false,
    "vertical_scroll_margin": 6,
-   "vim_mode": true,
+   "vim_mode": false,
    "cursor_shape": "underline",
-   "ui_font_size": 13,
-   "buffer_font_size": 13,
+   "ui_font_size": 14,
+   "buffer_font_size": 14,
    "theme": "Jade",
    "active_pane_modifiers": {
       "magnification": 1.0,
