--- a/zed/settings.json
+++ b/zed/settings.json
@@ -42,7 +42,7 @@
    "cursor_shape": "underline",
    "ui_font_size": 14,
    "buffer_font_size": 14,
-   "theme": "Jade",
+   "theme": "Cyan Light",
    "active_pane_modifiers": {
       "magnification": 1.0,
       "border_size": 0.0,
