--- a/ghostty/config
+++ b/ghostty/config
@@ -43,6 +43,7 @@ mouse-hide-while-typing = true
 split-divider-color = yellow
 window-save-state = always
 window-colorspace = "display-p3"
+macos-titlebar-style = tabs
 
 
 #
