--- a/ghostty/config
+++ b/ghostty/config
@@ -42,6 +42,7 @@ mouse-hide-while-typing = true
 
 split-divider-color = yellow
 window-save-state = always
+window-theme = auto
 window-colorspace = "display-p3"
 macos-titlebar-style = tabs
 quick-terminal-position = bottom
