--- a/ghostty/config
+++ b/ghostty/config
@@ -31,6 +31,7 @@ font-thicken = true
 # theme = Grey-green
 theme = Dracula
 window-padding-x = 2
+window-padding-y = 4
 
 cursor-style = block
 cursor-style-blink = false
@@ -46,6 +47,7 @@ window-save-state = always
 window-theme = auto
 window-colorspace = "display-p3"
 macos-titlebar-style = tabs
+macos-window-shadow = true
 quick-terminal-position = bottom
 
 #
